# tradar

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  milestones.md  open-source-boundary.md  privacy.md  product-principles.md  release.md  usage.md
examples/: config.toml  full.toml  minimal.toml
tests/: conftest.py
tests/fixtures/: README.md
tests/fixtures/claude/: happy_path.jsonl  missing_timestamp.jsonl  skill_trace.jsonl
tests/fixtures/codex/: encrypted_content.jsonl  happy_path.jsonl  noisy_proactive_loop.jsonl
tests/fixtures/git_commits/: recent_commits.txt
tests/fixtures/project_docs/: README.md  basic_doc.md
tests/fixtures/project_docs/docs/: release_checklist.md
tests/fixtures/project_docs/notes/: first_user_decision.md
tests/golden/: README.md  test_golden_cases.py
tests/golden/cases/tradar-agent-path/: evidence_pack.json  expected_checklist.json  validated_report.json
tests/integration/: test_decision_state_store.py  test_enhanced_renderer.py  test_evidence_store.py  test_generate_agent.py  test_generate_render.py  test_generate_run_summary.py  test_pack_builder.py  test_renderer.py
tests/smoke/: test_cli.py  test_debug_bundle.py  test_open_source_artifacts.py  test_package_identity.py  test_prompt_schema.py
tests/unit/: test_config_loader.py  test_connectors.py  test_errors_catalog.py  test_golden_checklist.py  test_normalizer.py  test_privacy_gate.py  test_schema_repair.py  test_schemas.py
tradar/: __init__.py
tradar/agent_runner/: __init__.py  base.py  claude_code_adapter.py  codex_adapter.py  schema_repair.py
tradar/agent_runner/prompts/: analyst.md  html_design.md  schema_repair.md
tradar/cli/: app.py
tradar/config/: __init__.py  defaults.py  loader.py
tradar/connectors/: __init__.py  base.py  claude_code.py  codex.py  git_commits.py  project_docs.py
tradar/errors/: __init__.py  catalog.py
tradar/evidence/: __init__.py  normalizer.py  pack_builder.py  privacy.py  store.py
tradar/golden/: __init__.py  checklist.py
tradar/renderer/: __init__.py  base.py  debug_bundle.py  enhanced.py
tradar/renderer/templates/: report.html.j2
tradar/schemas/: __init__.py  decision.py  evidence.py  raw_event.py  report.py  run.py  time.py
tradar/state/: __init__.py  decisions.py
