[project]
name = "tradar"
version = "0.1.0"
description = "Trace Radar for Builders: find project signals in your agent work traces."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "pydantic>=1.10,<2",
  "rich>=13",
  "typer>=0.12",
]

[project.scripts]
tradar = "tradar.cli.app:app"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradar"]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "llm_eval: optional golden report evaluation",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tradar"]
