[project]
name = "tradar"
version = "0.2.0"
description = "Trace Radar for Builders: find project signals in your agent work traces."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["agent", "local-first", "productivity", "traces"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
]
dependencies = [
  "jinja2>=3.1",
  "pydantic>=1.10,<2",
  "rich>=13",
  "typer>=0.26.2",
]

[project.urls]
Homepage = "https://github.com/Morriaty-The-Murderer/tradar"
Repository = "https://github.com/Morriaty-The-Murderer/tradar"
Issues = "https://github.com/Morriaty-The-Murderer/tradar/issues"
Documentation = "https://github.com/Morriaty-The-Murderer/tradar/tree/main/docs"

[project.scripts]
tradar = "tradar.cli.app:app"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradar"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.git",
  "/.mypy_cache",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.serena",
  "/.uv-cache",
  "/.venv",
  "/private",
]

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "llm_eval: optional golden report evaluation",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tradar"]
